追加了设备实时在线功能